@@ -246,6 +246,7 @@ class Usecode_machine
 	USECODE_INTRINSIC_DECL(book_mode);
 	USECODE_INTRINSIC_DECL(earthquake);
 	USECODE_INTRINSIC_DECL(is_pc_female);
+	USECODE_INTRINSIC_DECL(halt_scheduled);
 	USECODE_INTRINSIC_DECL(run_endgame);
 	USECODE_INTRINSIC_DECL(get_array_size);
 	USECODE_INTRINSIC_DECL(is_pc_inside);
@@ -258,6 +259,7 @@ class Usecode_machine
 	USECODE_INTRINSIC_DECL(get_equipment_list);
 	USECODE_INTRINSIC_DECL(nap_time);
 	USECODE_INTRINSIC_DECL(advance_time);
+	USECODE_INTRINSIC_DECL(in_usecode);
 	USECODE_INTRINSIC_DECL(path_run_usecode);
 	USECODE_INTRINSIC_DECL(close_gumps);
 	USECODE_INTRINSIC_DECL(in_gump_mode);
