@@ -1,3 +1,8 @@
+2000-06-13  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* 2 usecode intrinsics implemented:  halt_scheduled() and
+	in_usecode().  These are a bit risky...
+
 2000-06-12  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Conversations look more like the original U7 now.
